Added flyway dependancy, as well as flyway postres database dependancy, added some javadoc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 #POSTGRES SETUP
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgrespassword
@@ -9,6 +8,7 @@ spring.datasource.hikari.schema=public
 spring.jpa.show-sql=true
 
 #FLYWAY SETUP
+spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
 spring.flyway.user=postgres
 spring.flyway.password=postgrespassword
 spring.flyway.schemas=public
