--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
 # Used for testing/development purposes, disable in your production environment
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 #FLYWAY SETUP
 spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
