Updated the tables to be more logical, there's no need for section type table or input type table. Renamed the sections to simply 'Section' and the fields contained in the sections to 'SectionField'. Updated SQL scripts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,26 @@
 # POSTGRES SETUP
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/postgres
 
 # Replace the database username and password with your own and do not share
 spring.datasource.username=postgres
-spring.datasource.password=postgrespassword
+spring.datasource.password=mysecretpassword
 
 spring.datasource.hikari.schema=public
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
 
 # Used for testing/development purposes, disable in your production environment
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 
 # FLYWAY SETUP
-spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
+spring.flyway.url=jdbc:postgresql://0.0.0.0:5432/postgres
 
 # Replace the database username and password with your own and do not share
 spring.flyway.user=postgres
-spring.flyway.password=postgrespassword
+spring.flyway.password=mysecretpassword
 spring.flyway.schemas=public
 spring.flyway.locations=classpath:db/migration
 
