Fixed some bugs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # POSTGRES SETUP
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 
 # Replace the database username and password with your own and do not share
 spring.datasource.username=postgres
@@ -16,7 +16,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 
 # FLYWAY SETUP
-spring.flyway.url=jdbc:postgresql://0.0.0.0:5432/postgres
+spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
 
 # Replace the database username and password with your own and do not share
 spring.flyway.user=postgres
